--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bootstrap": "^5.3.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0"
+    "react-i18next": "^13.0.1",
+    "react-router-dom": "^6.13.0",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
