--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
