--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-router-dom": "^6.13.0",
+    "react-waypoint": "^10.3.0",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
