--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-i18next": "^13.0.1",
     "react-router-dom": "^6.13.0",
     "react-waypoint": "^10.3.0",
+    "slugify": "^1.6.6",
+    "swiper": "^10.0.4",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
