--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-waypoint": "^10.3.0",
     "slugify": "^1.6.6",
     "swiper": "^9.4.1",
+    "usehooks-ts": "^2.9.1",
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
