--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
+    "d3-scale": "^4.0.2",
     "lodash": "^4.17.21",
     "ol": "^7.4.0",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
+    "@types/d3-scale": "^4.0.3",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
