--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "d3-scale": "^4.0.2",
+    "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "ol": "^7.4.0",
     "react": "^18.2.0",
