--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: .
-        run: npm install
+        run: npm install --force
       
       - name: Build react
         working-directory: .
