--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.29.19",
-    "@tanstack/react-virtual": "^3.0.0-beta.54",
-    "anycluster-openlayers": "^0.3.1",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "d3-scale": "^4.0.2",
     "dayjs": "^1.11.9",
+    "formik": "^2.4.3",
     "lodash": "^4.17.21",
     "ol": "^7.4.0",
     "react": "^18.2.0",
@@ -31,7 +30,8 @@
     "swiper": "^9.4.1",
     "use-eazy-auth": "^2.6.0",
     "usehooks-ts": "^2.9.1",
-    "vite-plugin-svgr": "^3.2.0"
+    "vite-plugin-svgr": "^3.2.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/d3-scale": "^4.0.3",
