--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^13.0.1",
     "react-router-dom": "^6.13.0",
     "react-switch": "^7.0.0",
+    "react-toastify": "^9.1.3",
     "react-waypoint": "^10.3.0",
     "slugify": "^1.6.6",
     "swiper": "^9.4.1",
