--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
+    "blueimp-load-image": "^5.16.0",
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "d3-scale": "^4.0.2",
@@ -36,6 +37,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/blueimp-load-image": "^5.16.2",
     "@types/d3-scale": "^4.0.3",
     "@types/lodash": "^4.14.195",
     "@types/react": "^18.0.37",
