--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.0.8",
+    "@fontsource/roboto-slab": "^5.0.11",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "blueimp-load-image": "^5.16.0",
